[workspace]
members = [
    "nxdll_loader",
    "nxdll_bindings",
#    "nxdll_runtime",
    "nxdll_shared"
]
resolver = "2"

[workspace.dependencies]
nxdk-rs = { path = "../../nxdk-rs" }
libc = { version = "0.2.175", default-features = false }
log = "0.4.27"
anyhow = { version = "1.0.94", default-features = false }
lazy_static = { version = "1.5.0", default-features = false, features = ["spin_no_std"] }
time = { version = "0.3.37", default-features = false, features = ["alloc"] }

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1